# chart-pattern

./: .gitignore  README.md  docker-compose.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  docs.md  feature.md  (+1 more)
api/: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
api/src/: database.py  main.py
api/src/api/v1/: router.py
api/src/api/v1/endpoints/: __init__.py  chart_matching.py  chart_similarity.py  health.py  symbols.py  users.py
api/src/backtest/: README.md  algorithm_interface.py  backtest.py  candleonly_algorithm.py  evaluation_strategy.py  evaluation_strategy_interface.py  price_analysis_strategy.py  service_algorithm.py
api/src/backtest/strategies/: __init__.py  evaluation_strategy.py  price_analysis_strategy.py  random_strategy.py  time_based_average_strategy.py
api/src/constants/: symbol_table_map.py
api/src/db/: init_db.py  session.py
api/src/models/: __init__.py  chart_similarity.py  user.py
api/src/repositories/: __init__.py  chart_similarity_repository.py  symbols_repository.py  user_repository.py
api/src/scheduler/: __init__.py  binance_job.py  chart_similarity_job.py  scheduler.py
api/src/schemas/: __init__.py  chart_matching.py  chart_similarity.py  symbols.py  user.py
api/src/services/: __init__.py  chart_matching_service.py  chart_similarity_service.py  symbols_service.py  user_service.py
batch/: README.md  binance_client.py  collector.py  db_loader.py  main.py  pyproject.toml
batch/notebooks/: binance_smoke.ipynb
web/: .bundlemonrc.json  .env.example  .gitignore  Dockerfile  biome.json  index.html  knip.json  openapi.json  orval.config.ts  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts  vitest.setup.tsx
(+101 files in other folders)
