[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.8",
]

[tool.ruff]
line-length = 80
indent-width = 2
exclude = [".git", "__pycache__", "tests/*"]
fix = true

[tool.ruff.lint]
ignore = ["F401", "E402", "E501"]
select = ["I", "E", "F", "W", "C90"]